--- a/ps/src/main/webapp/css/public.css
+++ b/ps/src/main/webapp/css/public.css
@@ -43,3 +43,4 @@ ul.pagination > li > a{float:none;}
 .container{padding-left:0;padding-right:0;}
 .navbar-inverse .navbar-brand{color:#fff;}
 .navbar-inverse .navbar-nav > li > a{color:yellow;}
+.navbar-inverse .navbar-text{color:#fff;}
